hphp/hack/test/typecheck/safe_abstract/concreteclassname_1.php.exp
ERROR: File "concreteclassname_1.php", line 23, characters 19-21:
Invalid argument (Typing[4110])
  File "concreteclassname_1.php", line 12, characters 26-45:
  Expected `concreteclassname<A>`
  File "classname.hhi", line 12, characters 27-32:
  But got `string`
